syntax = "proto3";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.data.otdr;

message OtdrMeasurementParameterSet {
  repeated LaserUnit laser_units = 1;
}

message LaserUnit {
  string name = 1;
  repeated DistanceRange distance_ranges = 2;
  repeated string dwdm_channels = 3;
}

message DistanceRange {
  string name = 1;
  repeated string pulse_durations = 2;
  repeated string averaging_times = 3;
  repeated string resolutions = 4;
  repeated string live_averaging_times = 5;
}

enum MeasurementType {
  Manual = 0;
  Auto = 1;
//  VScoutAllLasers = ;
//  VScoutSingleLaser = ;
//  ManualRealtime = ;
//  AutoRealtime = ;
//  AutoSkipMeasurement = ; 
//  VscoutSkipMeasurement = ;
}

enum NetworkType {
  PointToPoint = 0;
  ManualPON = 1;
  AutoPON = 2;
  xWDM = 3;
  AutoPonToOnt = 4;
}

message MeasurementSettings {
  MeasurementType measurementType = 1;
  NetworkType networkType = 2;
  double backscatterCoeff = 3;
  double refractiveIndex = 4;
  string laser = 5;
  string distanceRange = 6;
  string averagingTime = 7;
  string pulse = 8;
  string samplingResolution = 9;

  double eventLossThreshold = 10;
  double eventReflectanceThreshold = 11;
  double endOfFiberThreshold = 12;

  bool fastMeasurement = 13;
  bool checkConnectionQuality = 14;

   double splitter1dB = 15;
   double splitter2dB = 16;
   int32 mux = 17;
}